# learn-wgpu

./: Cargo.toml  build.rs
src/: camera.rs  challenge.wgsl  lib.rs  light.wgsl  model.rs  resources.rs  shader.wgsl  texture.rs
