[package]
name = "learn-wgpu"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
bytemuck = { version = "1.13", features = ["derive"] }
cgmath = "0.18"
env_logger = "0.10"
image = { version = "0.24", default-features = false, features = ["png", "jpeg"] }
log = "0.4"
pollster = "0.3"
tobj = { version = "4.0", features = ["async"] }
wgpu = "0.16"
winit = "0.28"

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.3"
glob = "0.3"